Fix text clipping

--- a/inner_air/main/dev/scss/about.scss
+++ b/inner_air/main/dev/scss/about.scss
@@ -23,8 +23,8 @@
         flex-direction: column;
         justify-content: start;
         padding: 1em;
-        height: 350px;
-        width: 250px;
+        height: 370px;
+        width: 260px;
         text-align: center;
 
         .about_img {
